# git-review

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  agent-tasks.md  report.html  thisiswhatwedo.md
.claude/: settings.json
.claude/agents/: architect.md  coder.md  deep-researcher.md  deep-synthesizer.md  documentation.md  explainer.md  explorer.md  junior-coder.md  optimizer.md  planner.md  qa.md  red-teamer.md  requirements-interviewer.md  reviewer.md  senior-coder.md  tech-lead.md
.claude/helpers/: statusline.cjs
.claude/hooks/: auto-checkpoint-resume.sh  auto-checkpoint.sh  check-claude-flow-memory.sh  check-unwrap.sh  enforce-agent-cap.sh  enforce-branch-naming.sh  enforce-delegation.sh  enforce-idle-quality.sh  enforce-memory.sh  enforce-orchestrator-delegation-v2.sh  enforce-plan-files.sh  enforce-review-gate.sh  enforce-serena-usage.sh  enforce-task-quality.sh  enforce-ticket.sh  enforce-visible-agents.sh  protect-hooks.sh  protect-main.sh  scan-secrets.sh  workflow-reminder.sh
docs/: claude-flow-integration-analysis.md  workflow.md
plans/: eng-31-dashboard-plan.md  syntax-highlight-critique.md  syntax-highlight-plan.md
project-template/: CLAUDE.md
project-template/.claude/: settings.json
project-template/docs/: capabilities.md  setup-guide.md
research-team-template/: README.md  requirements.md
research-team-template/agents/: deep-researcher.md  deep-synthesizer.md
research-team-template/prompts/: decompose.md  research.md  synthesize.md
scripts/: recover.sh
src/: lib.rs  main.rs
src/cli/: mod.rs
tests/: approve_tests.rs  gate_tests.rs
(+34 files in other folders)
