[package]
name = "git-review"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
anyhow = "1"
thiserror = "2"
syntect = { version = "5", default-features = false, features = ["parsing", "fancy-regex", "default-syntaxes", "default-themes", "plist-load", "regex-onig"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
